# ytdl-nfo

./: .gitignore  .semgrepignore  .uplift.yml  CHANGELOG.md  CLAUDE.md  README.md  flake.nix  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/scripts/: generate-semgrep-report.py  generate-summary.py  generate-test-report.py
.github/workflows/: ci.yml  release.yaml  renovate.yml  uplfitci.yaml  uplift.yaml
docs/: installation.md
docs/plans/: 2025-01-27-uv-migration-and-testing-design.md  2025-01-27-uv-migration-and-tests.md  2025-11-27-todo.md  2025-11-29-ci-json-reporting-design.md  2025-11-29-ci-json-reporting.md  2025-11-30-automated-package-releases-design.md  2025-11-30-automated-package-releases.md
tests/: conftest.py  test_integration.py  test_nfo.py  test_ytdl_nfo.py
tests/fixtures/: sample_youtube.info.json
ytdl_nfo/: Ytdl_nfo.py  __init__.py  __main__.py  nfo.py
