[project]
name = "ytdl-nfo"
version = "0.3.0"
description = "Utility to convert youtube-dl/yt-dlp json metadata to .nfo"
license = { text = "Unlicense" }
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Owen", email = "owdevel@gmail.com" }]

dependencies = ["PyYAML>=6.0.1", "setuptools>=70.2.0"]

[project.urls]
repository = "https://github.com/owdevel/ytdl-nfo"

[project.scripts]
ytdl-nfo = "ytdl_nfo:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
