[project]
name = "ytdl-nfo"
version = "0.3.0"
description = "Utility to convert youtube-dl/yt-dlp json metadata to .nfo"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Unlicense" }
authors = [{ name = "Owen", email = "owdevel@gmail.com" }]

dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
repository = "https://github.com/owdevel/ytdl-nfo"

[project.scripts]
ytdl-nfo = "ytdl_nfo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
    "N999",  # Module name matches yt-dlp/youtube-dl naming convention
    "N801",  # Class name Ytdl_nfo is established public API
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=ytdl_nfo",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: End-to-end integration tests",
]
